load-tests/simple_producer_consumer/deployment/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-producer-consumer
  annotations:
    kubernetes.io/ingress.class: nginx
  namespace: default
spec:
  rules:
  - host: bal.perf.test
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: route-guide-bid
            port:
              number: 9092
  tls:
  - hosts:
    - "bal.perf.test"
